Titutlo centrado autom

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="contenidor">
+    <h1>Un Gimnas</h1>
+    <p></p>
+
+
+
+
+    </div>
 </body>
 </html>
