--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 </head>
 <body>
     <div class="contenidor">
-    <h1>Un Gimnas</h1>
-    <p></p>
-
-
-
-
+    <h1>Titulo</h1>
+    <h2>Subtitulo</h2>
+    </div>
+    <div class="box">
+    <p>hola que tal</p>
+    </div>
+    <div>
+    <a href="productes.html">Productos</a>
+    <a href="contacte.html">Contactos</a>
     </div>
 </body>
 </html>
