--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,19 +7,11 @@
     <link rel="stylesheet" href="global.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inicio</title>
 </head>
 <body>
-    <div class="contenidor">
-    <h1>Titulo</h1>
-    <h2>Subtitulo</h2>
-    </div>
-    <div class="box">
-    <p>hola que tal</p>
-    </div>
-    <div>
-    <a href="productes.html">Productos</a>
-    <a href="contacte.html">Contactos</a>
+   <div class="autocenterContainer titleContainer">
+        <h1>Investing in your clients</h1>
     </div>
 </body>
 </html>
