--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,8 +8,14 @@
     <title>Inicio</title>
 </head>
 <body>
-   <div class="autocenterContainer titleContainer">
-        <h1>Investing in your clients</h1>
-    </div>
+    <header>
+        <nav class="cabecera">
+            <div>
+                <a href="index.html">Inicio</a>
+                <a href="productes.html">Productos</a>
+                <a href="contacte.html">Contacots</a>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
