--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="cabecera">
+        <nav id="cabecera">
             <div>
                 <a href="index.html">Inicio</a>
                 <a href="productes.html">Productos</a>
@@ -17,5 +17,39 @@
             </div>
         </nav>
     </header>
+
+    <div class="autocenterContainer hero">
+        <h1>Lorem Ipsum</h1>
+        <h2>Tienda de Lorem Ipsum</h2>
+        <a href="#comprar" class="boton">Comprar</a>
+    </div>
+        <div class="">
+
+        </div>
+
+
+
+
+
+    </section>
+    <div class="autocenterContainer">
+        <h2 class="hero">
+            Envios 48h · Canvios gratuitos · Pagamiento seguro
+        </h2>
+    </div>
+    <footer>
+        <div id="pie">
+            <h2>Copyright Zhihang</h2>
+            <h2>zlinjiang.25cf@iesesteveterradas.cat</h2>
+            <h2>
+                Redes Sociales:
+                <a href="https://x.com/home">X</a>
+                -
+                <a href="https://www.instagram.com/">Instagram</a>
+                -
+                <a href="https://www.facebook.com/?locale=es_ES">Facebook</a>
+            </h2>
+        </div>
+    </footer>
 </body>
 </html>
