--- a/index.html
+++ b/index.html
@@ -17,26 +17,41 @@
             </div>
         </nav>
     </header>
-
-    <div class="autocenterContainer hero">
-        <h1>Lorem Ipsum</h1>
-        <h2>Tienda de Lorem Ipsum</h2>
-        <a href="#comprar" class="boton">Comprar</a>
-    </div>
-        <div class="">
-
+    <main class="principal">
+        <div class="autocenterContainer hero">
+            <h1>Aguador</h1>
+            <h2>Tienda de Aguas</h2>
+            <a href="#comprar" class="boton">Comprar</a>
         </div>
 
+        <section class="coleccion">
+            <div class="card">
+                <h2>Agua</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pretium dolor eros, quis egestas nisl placerat eu. Nullam ac sem consequat, pulvinar augue a, iaculis magna. Vivamus rutrum libero sed nisi semper aliquet. Integer ac nisl nec felis congue iaculis quis sed est. Phasellus mattis augue ex, ac tincidunt eros lobortis vel. In mattis diam tellus, non euismod augue ultrices eget. Vivamus odio turpis, lobortis at neque sed, finibus malesuada lorem. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</p>
+                <span class="etiqueta">Aprobado</span>
+            </div>
+            <div class="card">
+                <h2>Agua Mineral</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pretium dolor eros, quis egestas nisl placerat eu. Nullam ac sem consequat, pulvinar augue a, iaculis magna. Vivamus rutrum libero sed nisi semper aliquet. Integer ac nisl nec felis congue iaculis quis sed est. Phasellus mattis augue ex, ac tincidunt eros lobortis vel. In mattis diam tellus, non euismod augue ultrices eget. Vivamus odio turpis, lobortis at neque sed, finibus malesuada lorem. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</p>
+                <span class="etiqueta">Aprobado</span>
+                <span class="etiqueta">Mineral</span>
+                <span class="etiqueta">100x100</span>
+            </div>
+            <div class="card">
+                <h2>Agua con Gas</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pretium dolor eros, quis egestas nisl placerat eu. Nullam ac sem consequat, pulvinar augue a, iaculis magna. Vivamus rutrum libero sed nisi semper aliquet. Integer ac nisl nec felis congue iaculis quis sed est. Phasellus mattis augue ex, ac tincidunt eros lobortis vel. In mattis diam tellus, non euismod augue ultrices eget. Vivamus odio turpis, lobortis at neque sed, finibus malesuada lorem. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</p>
+                <span class="etiqueta">Aprobado</span>
+                <span class="etiqueta">Gaseoso</span>
+            </div>
+        </section>
 
-
-
-
-    </section>
-    <div class="autocenterContainer">
-        <h2 class="hero">
-            Envios 48h · Canvios gratuitos · Pagamiento seguro
-        </h2>
-    </div>
+        
+        <div class="autocenterContainer">
+            <h2 class="hero">
+                Envios 48h · Canvios gratuitos · Pagamiento seguro
+            </h2>
+        </div>
+    </main>
     <footer>
         <div id="pie">
             <h2>Copyright Zhihang</h2>
