--- a/productes.html
+++ b/productes.html
@@ -8,6 +8,29 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav id="cabecera">
+            <div>
+                <a href="index.html">Inicio</a>
+                <a href="productes.html">Productos</a>
+                <a href="contacte.html">Contacots</a>
+            </div>
+        </nav>
+    </header>
     
+    <footer>
+        <div id="pie">
+            <h2>Copyright Zhihang</h2>
+            <h2>zlinjiang.25cf@iesesteveterradas.cat</h2>
+            <h2>
+                Redes Sociales:
+                <a href="https://x.com/home">X</a>
+                -
+                <a href="https://www.instagram.com/">Instagram</a>
+                -
+                <a href="https://www.facebook.com/?locale=es_ES">Facebook</a>
+            </h2>
+        </div>
+    </footer>
 </body>
 </html>
