--- a/productes.html
+++ b/productes.html
@@ -17,7 +17,21 @@
             </div>
         </nav>
     </header>
-    
+
+    <div class="filtro">
+        <a href="#">Todos</a>
+        -
+        <a href="#">Impermeables</a>
+        -
+        <a href="#">Luminosos</a>
+        -
+        <a href="#">Personalizados</a>
+        -
+        <a href="#">Precio: Bajo</a>
+        -
+        <a href="#">Precio: Alto</a>
+    </div>
+
     <footer>
         <div id="pie">
             <h2>Copyright Zhihang</h2>
