Productos con imagen y precio

--- a/productes.html
+++ b/productes.html
@@ -18,20 +18,57 @@
         </nav>
     </header>
 
-    <div class="filtro">
-        <a href="#">Todos</a>
-        -
-        <a href="#">Impermeables</a>
-        -
-        <a href="#">Luminosos</a>
-        -
-        <a href="#">Personalizados</a>
-        -
-        <a href="#">Precio: Bajo</a>
-        -
-        <a href="#">Precio: Alto</a>
-    </div>
-
+    <main class="principal">
+        <div class="autocenterContainer hero">
+            <h1>Nuestras Aguas</h1>
+            <h2>Descubre de todo tipo de aguas</h2>
+        </div>
+        <div class="filtro">
+            <a href="#">Todos</a>
+            -
+            <a href="#">Impermeables</a>
+            -
+            <a href="#">Luminosos</a>
+            -
+            <a href="#">Personalizados</a>
+            -
+            <a href="#">Precio: Bajo</a>
+            -
+            <a href="#">Precio: Alto</a>
+        </div>
+        <section>
+            <div class="productoscard">
+                <img src="img/gas.png">
+                <h3>Agua con Gas</h3>
+                <p>10€</p>
+            </div>
+            <div class="productoscard">
+                <img src="img/mineral.png">
+                <h3>Agua Mineral</h3>
+                <p>50€</p>
+            </div>
+            <div class="productoscard">
+                <img src="img/AGUA POTABLE.png">
+                <h3>Agua Potable</h3>
+                <p>1€</p>
+            </div>
+            <div class="productoscard">
+                <img src="img/FRESA.png">
+                <h3>Agua con sabor a Fresa</h3>
+                <p>20€</p>
+            </div>
+            <div class="productoscard">
+                <img src="img/PLANTA.png">
+                <h3>Agua para plantas</h3>
+                <p>0.50€</p>
+            </div>
+            <div class="productoscard">
+                <img src="img/RECICLADA.png">
+                <h3>Agua reciclada</h3>
+                <p>0.20€</p>
+            </div>
+        </section>
+    </main>
     <footer>
         <div id="pie">
             <h2>Copyright Zhihang</h2>
