arreglar errores y mover cosas

--- a/contacte.html
+++ b/contacte.html
@@ -13,11 +13,13 @@
             <div>
                 <a href="index.html">Inicio</a>
                 <a href="productes.html">Productos</a>
-                <a href="contacte.html">Contacots</a>
+                <a href="contacte.html">Contactos</a>
             </div>
         </nav>
     </header>
     
+
+
     <footer>
         <div id="pie">
             <h2>Copyright Zhihang</h2>
