--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div>
                 <a href="index.html">Inicio</a>
                 <a href="productes.html">Productos</a>
-                <a href="contacte.html">Contacots</a>
+                <a href="contacte.html">Contactos</a>
             </div>
         </nav>
     </header>
