--- a/contacte.html
+++ b/contacte.html
@@ -17,9 +17,28 @@
             </div>
         </nav>
     </header>
-    
-
-
+<main class="principal">
+        <div class="autocenterContainer">
+            <h1>Contacto</h1>
+            <div>
+                <div>
+                    <h2>Información de contacto</h2>
+                    <p>Calle del aguador aguado123</p>
+                    <p>9:00 - 18:00</p>
+                    <p>Lunes-Viernes</p>
+                    <p>+34 123 456 789</p>
+                    <h3>Ubicación</h3>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <div class="map-placeholder">
+                    <img src="img/Sin título.png"alt="mapa">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     <footer>
         <div id="pie">
             <h2>Copyright Zhihang</h2>
