Ahora si acabadisismo
He puesto las dos columnas en cotactos
tambien he agregado mejoras y grids y nuevas cosas para que esta mejor

--- a/contacte.html
+++ b/contacte.html
@@ -17,28 +17,25 @@
             </div>
         </nav>
     </header>
-<main class="principal">
-        <div class="autocenterContainer">
-            <h1>Contacto</h1>
-            <div>
-                <div>
-                    <h2>Información de contacto</h2>
-                    <p>Calle del aguador aguado123</p>
-                    <p>9:00 - 18:00</p>
-                    <p>Lunes-Viernes</p>
-                    <p>+34 123 456 789</p>
-                    <h3>Ubicación</h3>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <div class="map-placeholder">
-                    <img src="img/Sin título.png"alt="mapa">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
+<div class="contenedor-contacto">
+    <div class="contacto">
+        <h2>
+            Contactanos
+        </h2>
+        <span class="contactot">Nombre</span>
+        <span class="contactot">Email</span>
+        <span class="texto">Mensaje</span>
+    </div>
+    <div class="contacto">
+        <h2>Direccion</h2>
+        <p>Aguador de aguas123</p>
+        <h2>Horario</h2>
+        <p>Lunes-Viernes, de 9:00-20:00</p>
+        <h2>Localizacion</h2>
+        <img src="img/Sin título.png"class=mapa>
+    </div>
+</div>
+
     <footer>
         <div id="pie">
             <h2>Copyright Zhihang</h2>
