--- a/productes.html
+++ b/productes.html
@@ -36,7 +36,7 @@
             -
             <a href="#">Precio: Alto</a>
         </div>
-        <section>
+        <section class="grid">
             <div class="productoscard">
                 <img src="img/gas.png">
                 <h3>Agua con Gas</h3>
